--- a/index.html
+++ b/index.html
@@ -3,64 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Responsive Photography Website</title>
-
-
-
+  <title>BaseCount | Home</title>
       <link rel="stylesheet" href="css/style.css">
-
-
 </head>
 
 <body>
 
   <main>
     <!-- Landing Area -->
-    <div id="landing">
+    <div class="frame" id="landing">
       <div id="landing-text">
         <div id="landing-text-inner">
-          <img src="./images/basecount-logo.png" alt="">
-          <!-- <h1>Acme Photography</h1> -->
-          <h2>Beautiful Natural Photography</h2>
-          <a href="#images" class="btn" id="view-work">
-            View Work
-          </a>
+            <img id="logo" src="./images/basecount-logo.png" alt="">
+            <h2>Shelter Capacity <br><span>Tracking Software</span></h2>
+            <a href="#images" class="btn" id="view-work">
+              Check it out  
+            </a>
         </div>
       </div>
-      <div id="landing-image">
-        <img src="./images/banner.gif" alt="">
-      </div>
+      <div id="landing-image"></div>
     </div>
 
     <div id="images">
       <div id="header">
         <h2>Our Work</h2>
-      </div>
-
-      <img src="https://source.unsplash.com/1600x900/?nature,water" alt="">
-      <div class="caption">
-        <h3>Photo One</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-      </div>
-      <img src="https://source.unsplash.com/1600x900/?nature,trees" alt="">
-      <div class="caption">
-        <h3>Photo Two</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-      </div>
-      <img src="https://source.unsplash.com/1600x900/?nature,flowers" alt="">
-      <div class="caption">
-        <h3>Photo Three</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-      </div>
-      <img src="https://source.unsplash.com/1600x900/?nature,animals" alt="">
-      <div class="caption">
-        <h3>Photo Four</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-      </div>
-      <img src="https://source.unsplash.com/1600x900/?nature,clouds" alt="">
-      <div class="caption">
-        <h3>Photo Five</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
       </div>
     </div>
   </main>
