description page in progress

--- a/index.html
+++ b/index.html
@@ -19,14 +19,27 @@
             <a href="#images" class="btn" id="view-work">
               Check it out  
             </a>
+            <a href="#images" class="btn" id="sign-up">
+                Sign up for an account 
+              </a>
         </div>
       </div>
       <div id="landing-image"></div>
     </div>
 
-    <div id="images">
+    <div class="frame" id="description">
       <div id="header">
-        <h2>Our Work</h2>
+        <h2>Basecount will be an easy-to-use realtime data
+            platform to centralize collection of information
+            from low-barrier sites
+        </h2>
+      </div>
+      <div id="diagram">
+        <div class="diagram-block" id="shelters"></div>
+        <div class="diagram-block" id="arrow"></div>
+        <div class="diagram-block" id="basecount-logo"></div>
+        <div class="diagram-block" id="arrow"></div>
+        <div class="diagram-block" id="referral"></div>
       </div>
     </div>
   </main>
