finished description section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>BaseCount | Home</title>
       <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -35,12 +36,48 @@
         </h2>
       </div>
       <div id="diagram">
-        <div class="diagram-block" id="shelters"></div>
-        <div class="diagram-block" id="arrow"></div>
-        <div class="diagram-block" id="basecount-logo"></div>
-        <div class="diagram-block" id="arrow"></div>
-        <div class="diagram-block" id="referral"></div>
+        <div class="diagram-block" id="shelters">
+          <div class="diagram-sub-block" id="winter-respite">
+            <p>
+              Winter Respite Site
+            </p>
+          </div>
+          <div class="diagram-sub-block" id="out-of-the-cold">
+            <p>
+              Out of the Cold Program
+            </p>
+          </div>
+        </div>
+        <div class="diagram-block" id="arrow">
+          <img src="./images/Arrow2to1.svg" alt="">
+        </div>
+        <div class="diagram-block" id="diagram-logo">
+          <img src="./images/basecount-logo.png" alt="">
+        </div>
+        <div class="diagram-block" id="arrow">
+          <img src="./images/Arrow1to2.svg" alt="">
+        </div>
+        <div class="diagram-block" id="referral">
+            <div class="diagram-sub-block-2">
+                <p>
+                  211
+                </p>
+              </div>
+              <div class="diagram-sub-block-2">
+                <p>
+                  Central Intake
+                </p>
+              </div>
+              <div class="diagram-sub-block-2">
+                  <p>
+                    Streets to Homes
+                  </p>
+              </div>
+        </div>
       </div>
+    </div>
+    <div class="frame" id="sign-up-frame">
+
     </div>
   </main>
 
