added the contact/register an account page

--- a/index.html
+++ b/index.html
@@ -77,29 +77,15 @@
       </div>
     </div>
     <div class="frame" id="sign-up-frame">
-
+      <h2>
+        Sorry! Basecount is a work in progress. We can't register users yet. But you can give us a shout at... 
+      </h2>
+      <a href="mailto:basecount@gmail.com?Subject=Hello!" class="btn">basecount@gmail.com</a>
     </div>
   </main>
 
-  <footer>
-    <h3>Get In Touch</h3>
-    <p>Email or call us to set up a consult</p>
-    <p>Email:
-      <strong>contact@acmephotos.test</strong>
-    </p>
-    <p>Phone:
-      <strong>(617) 555-5555</strong>
-    </p>
-  </footer>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
-
-
-
-    <script  src="js/index.js"></script>
-
-
-
-
+  <script  src="js/index.js"></script>
 </body>
 
 </html>
