update landing-text to be responsive + add small hoever on sign up + gradient to background so that it is clear that the background drop downs are not clickable

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>BaseCount | Home</title>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -14,15 +14,19 @@
     <!-- Landing Area -->
     <div class="frame" id="landing">
       <div id="landing-text">
+        <h2>Shelter Capacity
+          <br>
+          <span>Tracking Software</span>
+        </h2>
         <div id="landing-text-inner">
-            <img id="logo" src="./images/basecount-logo.png" alt="">
-            <h2>Shelter Capacity <br><span>Tracking Software</span></h2>
-            <a href="#images" class="btn" id="view-work">
-              Check it out  
-            </a>
-            <a href="#images" class="btn" id="sign-up">
-                Sign up for an account 
-              </a>
+
+
+          <a href="#images" class="btn" id="view-work">
+            Check it out
+          </a>
+          <a href="#images" class="btn" id="sign-up">
+            Sign up for an account
+          </a>
         </div>
       </div>
       <div id="landing-image"></div>
@@ -30,9 +34,8 @@
 
     <div class="frame" id="description">
       <div id="header">
-        <h2>Basecount will be an easy-to-use realtime data
-            platform to centralize collection of information
-            from low-barrier sites
+        <h2>Basecount will be an easy-to-use realtime data platform to centralize collection of information from low-barrier
+          sites
         </h2>
       </div>
       <div id="diagram">
@@ -58,34 +61,34 @@
           <img src="./images/Arrow1to2.svg" alt="">
         </div>
         <div class="diagram-block" id="referral">
-            <div class="diagram-sub-block-2">
-                <p>
-                  211
-                </p>
-              </div>
-              <div class="diagram-sub-block-2">
-                <p>
-                  Central Intake
-                </p>
-              </div>
-              <div class="diagram-sub-block-2">
-                  <p>
-                    Streets to Homes
-                  </p>
-              </div>
+          <div class="diagram-sub-block-2">
+            <p>
+              211
+            </p>
+          </div>
+          <div class="diagram-sub-block-2">
+            <p>
+              Central Intake
+            </p>
+          </div>
+          <div class="diagram-sub-block-2">
+            <p>
+              Streets to Homes
+            </p>
+          </div>
         </div>
       </div>
     </div>
     <div class="frame" id="sign-up-frame">
       <h2>
-        Sorry! Basecount is a work in progress. We can't register users yet. But you can give us a shout at... 
+        Sorry! Basecount is a work in progress. We can't register users yet. But you can give us a shout at...
       </h2>
       <a href="mailto:basecount@gmail.com?Subject=Hello!" class="btn">basecount@gmail.com</a>
     </div>
   </main>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
-  <script  src="js/index.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
